--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
           <li class="nav-item">
             <div class="nav-link-container">
               <a
-                href="/pages/information.html"
+                href="information.html"
                 class="nav-link"
                 onclick="setActiveNav(this)"
               >
@@ -115,18 +115,16 @@
             </div>
             <ul class="dropdown-menu">
               <li class="dropdown-item">
-                <a href="/pages/about.html" class="dropdown-link">About Us</a>
+                <a href="about.html" class="dropdown-link">About Us</a>
               </li>
               <li class="dropdown-item">
-                <a href="/pages/team.html" class="dropdown-link">Our Team</a>
+                <a href="team.html" class="dropdown-link">Our Team</a>
               </li>
               <li class="dropdown-item">
-                <a href="/pages/services.html" class="dropdown-link"
-                  >Services</a
-                >
+                <a href="services.html" class="dropdown-link">Services</a>
               </li>
               <li class="dropdown-item">
-                <a href="/pages/testimonials.html" class="dropdown-link"
+                <a href="testimonials.html" class="dropdown-link"
                   >Testimonials</a
                 >
               </li>
@@ -135,7 +133,7 @@
           <li class="nav-item">
             <div class="nav-link-container">
               <a
-                href="/pages/ratecards.html"
+                href="ratecards.html"
                 class="nav-link"
                 onclick="setActiveNav(this)"
               >
@@ -147,27 +145,27 @@
             </div>
             <ul class="dropdown-menu">
               <li class="dropdown-item">
-                <a href="/pages/portrait-rates.html" class="dropdown-link"
+                <a href="portrait-rates.html" class="dropdown-link"
                   >Portrait Photography</a
                 >
               </li>
               <li class="dropdown-item">
-                <a href="/pages/wedding-rates.html" class="dropdown-link"
+                <a href="wedding-rates.html" class="dropdown-link"
                   >Wedding Photography</a
                 >
               </li>
               <li class="dropdown-item">
-                <a href="/pages/event-rates.html" class="dropdown-link"
+                <a href="event-rates.html" class="dropdown-link"
                   >Event Photography</a
                 >
               </li>
               <li class="dropdown-item">
-                <a href="/pages/commercial-rates.html" class="dropdown-link"
+                <a href="commercial-rates.html" class="dropdown-link"
                   >Commercial Photography</a
                 >
               </li>
               <li class="dropdown-item">
-                <a href="/pages/special-packages.html" class="dropdown-link"
+                <a href="special-packages.html" class="dropdown-link"
                   >Special Packages</a
                 >
               </li>
@@ -176,7 +174,7 @@
           <li class="nav-item">
             <div class="nav-link-container">
               <a
-                href="/pages/store.html"
+                href="store.html"
                 class="nav-link"
                 onclick="setActiveNav(this)"
               >
@@ -188,28 +186,22 @@
             </div>
             <ul class="dropdown-menu">
               <li class="dropdown-item">
-                <a href="/pages/prints.html" class="dropdown-link">Prints</a>
+                <a href="prints.html" class="dropdown-link">Prints</a>
               </li>
               <li class="dropdown-item">
-                <a href="/pages/digital-products.html" class="dropdown-link"
+                <a href="digital-products.html" class="dropdown-link"
                   >Digital Products</a
                 >
               </li>
             </ul>
           </li>
           <li class="nav-item">
-            <a
-              href="/pages/contact.html"
-              class="nav-link"
-              onclick="setActiveNav(this)"
+            <a href="contact.html" class="nav-link" onclick="setActiveNav(this)"
               >Contact</a
             >
           </li>
           <li class="nav-item">
-            <a
-              href="/pages/blog.html"
-              class="nav-link"
-              onclick="setActiveNav(this)"
+            <a href="blog.html" class="nav-link" onclick="setActiveNav(this)"
               >Blog</a
             >
           </li>
@@ -262,11 +254,11 @@
           Where artistry meets technology to create timeless memories
         </p>
         <div class="hero-buttons">
-          <a href="/pages/ratecards.html" class="btn btn-primary h-btn">
+          <a href="ratecards.html" class="btn btn-primary h-btn">
             <i class="fas fa-images"></i>
             View Ratecards
           </a>
-          <a href="/pages/contact.html" class="btn btn-secondary h-btn">
+          <a href="contact.html" class="btn btn-secondary h-btn">
             <i class="fas fa-envelope"></i>
             Contact Us
           </a>
@@ -336,7 +328,7 @@
         </div>
         <!-- Mobile Bottom Bar -->
         <div class="lightbox-bottom-bar">
-          <div class="zoom-instruction">Swipe to view next picture</div>
+          <div class="zoom-instruction"></div>
         </div>
       </div>
     </main>
@@ -372,31 +364,31 @@
                 </a>
               </li>
               <li>
-                <a href="/pages/information.html">
+                <a href="information.html">
                   <i class="fas fa-chevron-right"></i>
                   Information
                 </a>
               </li>
               <li>
-                <a href="/pages/ratecards.html">
+                <a href="ratecards.html">
                   <i class="fas fa-chevron-right"></i>
                   Ratecards
                 </a>
               </li>
               <li>
-                <a href="/pages/store.html">
+                <a href="store.html">
                   <i class="fas fa-chevron-right"></i>
                   Store
                 </a>
               </li>
               <li>
-                <a href="/pages/contact.html">
+                <a href="contact.html">
                   <i class="fas fa-chevron-right"></i>
                   Contact
                 </a>
               </li>
               <li>
-                <a href="/pages/blog.html">
+                <a href="blog.html">
                   <i class="fas fa-chevron-right"></i>
                   Blog
                 </a>
