fixed gallery final

--- a/index.html
+++ b/index.html
@@ -279,10 +279,9 @@
       </div>
     </section>
 
-    <!-- Main Content -->
     <main>
       <!-- Gallery Section -->
-      <section id="gallery next-section" class="gallery container fade-in">
+      <section id="gallery" class="gallery container fade-in">
         <div class="gallery-header slide-in-left">
           <h2 class="gallery-title">Our Portfolio</h2>
           <p class="gallery-subtitle">
@@ -327,9 +326,6 @@
           </div>
         </div>
         <!-- Mobile Bottom Bar -->
-        <div class="lightbox-bottom-bar">
-          <div class="zoom-instruction"></div>
-        </div>
       </div>
     </main>
 
