--- a/try.html
+++ b/try.html
@@ -564,13 +564,13 @@
       }
       @media (min-width: 375.1px) and (max-width: 767px) {
         .fb-block--BKk4WY .fb-block__elements {
-          grid-template-rows: repeat(
-              4,
-              minmax(var(--grid-row-height-text), auto)
-            ) repeat(9, minmax(var(--grid-row-height), auto)) repeat(
+          grid-template-rows:
+            repeat(4, minmax(var(--grid-row-height-text), auto))
+            repeat(9, minmax(var(--grid-row-height), auto)) repeat(
               13,
               minmax(var(--grid-row-height-text), auto)
-            ) repeat(3, minmax(var(--grid-row-height), auto));
+            )
+            repeat(3, minmax(var(--grid-row-height), auto));
         }
       }
       @media (min-width: 992px) {
