--- a/pp.html
+++ b/pp.html
@@ -67,7 +67,8 @@
             rgba(0, 0, 0, 0.1),
             rgba(0, 0, 0, 0.1)
           ),
-          url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 400 400"><rect width="400" height="400" fill="%23333"/><rect x="50" y="120" width="300" height="160" fill="%23fff" opacity="0.9"/><circle cx="200" cy="200" r="60" fill="%23d4a574"/></svg>');
+          url("assets/images/image3.jpg");
+        background-position: 50% 50%;
       }
 
       .solo-spotlight {
@@ -75,7 +76,8 @@
             rgba(0, 0, 0, 0.1),
             rgba(0, 0, 0, 0.1)
           ),
-          url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 400 400"><rect width="400" height="400" fill="%23e8e8e8"/><rect x="80" y="100" width="240" height="200" fill="%23fff"/><rect x="120" y="140" width="160" height="120" fill="%234a90e2"/><circle cx="200" cy="200" r="40" fill="%23d4a574"/></svg>');
+          url("assets/images/image4.jpg");
+        background-position: 50% 50%;
       }
 
       .luxury-layers {
@@ -83,7 +85,8 @@
             rgba(0, 0, 0, 0.1),
             rgba(0, 0, 0, 0.1)
           ),
-          url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 400 400"><rect width="400" height="400" fill="%232d1b2e"/><circle cx="200" cy="200" r="80" fill="%23d4a574"/><rect x="160" y="160" width="80" height="80" fill="%23c41e3a" opacity="0.8"/></svg>');
+          url("assets/images/image2.jpg");
+        background-position: 50% 50%;
       }
 
       .session-details {
@@ -147,7 +150,7 @@
   </head>
   <body>
     <div class="container">
-      <h1>PERSONAL PORTRAIT SESSIONS</h1>
+      <h1 class="container-title">PERSONAL PORTRAIT SESSIONS</h1>
 
       <div class="sessions-grid">
         <!-- Basic Studio Session -->
