--- a/index.html
+++ b/index.html
@@ -145,28 +145,13 @@
             </div>
             <ul class="dropdown-menu">
               <li class="dropdown-item">
-                <a href="portrait-rates.html" class="dropdown-link"
+                <a href="portrait.html" class="dropdown-link"
                   >Portrait Photography</a
                 >
               </li>
               <li class="dropdown-item">
-                <a href="wedding-rates.html" class="dropdown-link"
+                <a href="wedding.html" class="dropdown-link"
                   >Wedding Photography</a
-                >
-              </li>
-              <li class="dropdown-item">
-                <a href="event-rates.html" class="dropdown-link"
-                  >Event Photography</a
-                >
-              </li>
-              <li class="dropdown-item">
-                <a href="commercial-rates.html" class="dropdown-link"
-                  >Commercial Photography</a
-                >
-              </li>
-              <li class="dropdown-item">
-                <a href="special-packages.html" class="dropdown-link"
-                  >Special Packages</a
                 >
               </li>
             </ul>
